# marlow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.es.md  README.md  ROADMAP.md  __init__.py  base.py  install.py  pyproject.toml  server_linux.py  som.py  voice_daemon.py
.github/: SECURITY.md
config/sway/: config
marlow/: __init__.py  __main__.py  autonomous_linux.py  daemon_linux.py  launcher.py  marlow-cli.py  marlow-daemon.service  server.py  server_linux.py
marlow/bridges/: __init__.py  base.py  gemini_text.py  manager.py  tools_schema.py
marlow/cognition/: __init__.py  llm_interface.py
marlow/core/: __init__.py  adaptive.py  app_detector.py  cascade_recovery.py  cdp_manager.py  config.py  dialog_handler.py  error_journal.py  escalation.py  focus.py  gpu_detect.py  piper_tts.py  safety.py  sanitizer.py  settings.py  setup_wizard.py  som.py  uia_events.py  uia_utils.py  vad.py  voice_hotkey.py  voice_overlay.py  workflows.py
marlow/execution/: __init__.py
marlow/extensions/: __init__.py  registry.py  sandbox.py
marlow/kernel/: __init__.py  adapters.py  adaptive_waits.py  app_awareness.py  approval_queue.py  blackboard.py  config.py  constants.py  context_builder.py  demo_bridge.py  demonstration.py  desktop_observer.py  desktop_weather.py  error_recovery.py  event_bus.py  events.py  execution_pipeline.py  executor.py  goal_engine.py  integration.py  integration_linux.py  interrupt_manager.py  kernel.py  knowledge.py  loop_guard.py  memory.py  observation_router.py  ocr_summary.py  pattern_detector.py  plan_granularity.py  plan_validator.py  proactive_engine.py  reactive_loop.py  registry.py  replan.py  rollback.py  (+9 more)
tests/: test_cognition.py  test_config.py  test_database.py  test_execution_pipeline.py  test_goal_engine.py  test_integration.py  test_kernel.py  test_memory_knowledge.py  test_phase2_read_paths.py  test_phase3_observer.py  test_phase4_proactive.py  test_phase5_security.py  test_planning.py  test_safety.py  test_sanitizer.py  test_scoring.py  test_security.py  test_tool_wrapper.py  test_world_state.py
(+151 files in other folders)
