[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marlow-mcp"
version = "0.1.0"
description = "AI that works beside you, not instead of you. Windows desktop automation MCP server with background mode, security-first design, and zero telemetry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jose", email = "" },
]
keywords = [
    "mcp",
    "windows",
    "desktop-automation",
    "ai-assistant",
    "accessibility",
    "ui-automation",
    "background-automation",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "keyboard>=0.13.5",
    "pywin32>=306",
    "cryptography>=41.0.0",
    "PyAudioWPatch>=0.2.12.6",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]

[project.urls]
Homepage = "https://github.com/jarb02/marlow"
Documentation = "https://github.com/jarb02/marlow#readme"
Repository = "https://github.com/jarb02/marlow"
Issues = "https://github.com/jarb02/marlow/issues"

[project.scripts]
marlow = "marlow.server:main"

[tool.hatch.build.targets.wheel]
packages = ["marlow"]

[tool.hatch.build.targets.sdist]
include = [
    "marlow/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
